@@ -263,6 +263,8 @@ I I I.  P R O B L E M S   C O R R E C T E D   I N   T H I S  R E L E A S E
 
     This configuration now works correctly.
 
+5)  The 'forget' command now correctly removes saved ipsets.
+
 ----------------------------------------------------------------------------
            I V.  K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
@@ -409,6 +411,10 @@ None.
 	shorewall6-lite: 4.4.10-RC1
 	shorewall-init: 4.4.10-RC1
 	gateway:~# 
+
+3)  Beginning with this release, the 'restart' command now retains the
+    contents of the dynamic blacklist as well as the current UPnP rules
+    and the dynamic blacklist is saved over stop/start.
 
 ----------------------------------------------------------------------------
 V I.  P R O B L E M S  C O R R E C T E D  A N D  N E W   F E A T U R E S
